添加菜单接口
